--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,10 +1,10 @@
-directory_initialized_successfully = Directory {0} has been initialized successfully
-directory_already_initialized = Directory {0} has already been initialized.
+directory_initialized_successfully = Directory %s has been initialized successfully
+directory_already_initialized = Directory %s has already been initialized.
 invalid_input = Invalid input provided.
-branch_name_exists = Branch named {0} already exists
-directory_not_initialized = Directory {0} has NOT been initialized.
-file_already_exists = File {0} has already been initialized.
-sub_directory_already_exists = Subdirectory {0} has already been initialized.
+branch_name_exists = Branch named %s already exists
+directory_not_initialized = Directory %s has NOT been initialized.
+file_already_exists = File %s has already been initialized.
+sub_directory_already_exists = Subdirectory %s has already been initialized.
 files_to_be_committed = Files that are ready to be committed:
 Untracked_files = Untracked Files:
 
