--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -7,4 +7,5 @@ file_already_exists = File %s has already been initialized.
 sub_directory_already_exists = Subdirectory %s has already been initialized.
 files_to_be_committed = Files that are ready to be committed:
 Untracked_files = Untracked Files:
+File_is_not_found! = File %s is not found!
 
