testing commit tree service

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -9,4 +9,4 @@ files_to_be_committed = Files that are ready to be committed:
 Untracked_files = Untracked Files:
 File_is_not_found! = File %s is not found!
 successfully_added= Files added to the staging area.
-
+path_not_file = path %s is not a file.
