--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -6,7 +6,7 @@ directory_not_initialized = Directory %s has NOT been initialized.
 file_already_exists = File %s has already been initialized.
 sub_directory_already_exists = Subdirectory %s has already been initialized.
 files_to_be_committed = Files that are ready to be committed:
-Untracked_files = Untracked Files:
-File_is_not_found! = File %s is not found!
+untracked_files = Untracked Files:
+file_is_not_found! = File %s is not found!
 successfully_added = Files added to the staging area.
 stage_area_is_empty = no changes added to commit (use "syncNinja add")
