--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -9,5 +9,6 @@ files_to_be_committed = Files that are ready to be committed:
 Untracked_files = Untracked Files:
 File_is_not_found! = File %s is not found!
 stage_area_is_empty = no changes added to commit (use "syncNinja add")
-successfully_added= Files added to the staging area.
+successfully_added = Files added to the staging area.
+successfully_removed = Files are removed from staging area.
 path_not_file = path %s is not a file.
