add restore command

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -12,3 +12,4 @@ stage_area_is_empty = No changes added to commit (use "syncNinja add")
 successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
 path_not_file = path %s is not a file.
+restored_successfully = Changes has been restored successfully.
