--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -16,3 +16,4 @@ Changes_not_staged_for_commit = Changes not staged for commit:
 branch_created_successfully = branch %s created successfully
 branch_not_found = branch %s not found
 switched_to_branch = you are now on %s branch
+restored_successfully = Changes has been restored successfully.
