--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -5,7 +5,7 @@ branch_name_exists = Branch named %s already exists
 directory_not_initialized = Directory %s has NOT been initialized.
 file_already_exists = File %s has already been initialized.
 sub_directory_already_exists = Subdirectory %s has already been initialized.
-files_to_be_committed = Changes that are ready to be commited:
+files_to_be_committed = Changes that are ready to be committed:
 untracked_files = Untracked Files:
 file_is_not_found! = File %s is not found!
 stage_area_is_empty = No changes added to commit (use "syncNinja add")
@@ -13,3 +13,4 @@ successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
 path_not_file = path %s is not a file.
 Changes_not_staged_for_commit = Changes not staged for commit:
+restored_successfully = Changes has been restored successfully.
