--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -13,3 +13,6 @@ successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
 path_not_file = path %s is not a file.
 Changes_not_staged_for_commit = Changes not staged for commit:
+branch_created_successfully = branch %s created successfully
+branch_not_found = branch %s not found
+switched_to_branch = you are now on %s branch
