--- a/syncninja/src/main/resources/messages_en_US.properties
+++ b/syncninja/src/main/resources/messages_en_US.properties
@@ -13,3 +13,4 @@ successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
 path_not_file = Path %s is not a file.
 commit_successfully = Changes has been committed successfully.
+restored_successfully = Changes has been restored.
