--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -17,3 +17,4 @@ branch_created_successfully = branch %s created successfully
 branch_not_found = branch %s not found
 switched_to_branch = you are now on %s branch
 restored_successfully = Changes has been restored successfully.
+you_are_already_in_branch = You are already in branch %s
