--- a/syncninja/src/main/resources/messages_en_US.properties
+++ b/syncninja/src/main/resources/messages_en_US.properties
@@ -11,6 +11,11 @@ file_is_not_found! = File %s is not found!
 stage_area_is_empty = No changes added to commit (use "syncNinja add")
 successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
-path_not_file = Path %s is not a file.
 commit_successfully = Changes has been committed successfully.
-restored_successfully = Changes has been restored.
+path_not_file = path %s is not a file.
+Changes_not_staged_for_commit = Changes not staged for commit:
+branch_created_successfully = branch %s created successfully
+branch_not_found = branch %s not found
+switched_to_branch = you are now on %s branch
+restored_successfully = Changes has been restored successfully.
+you_are_already_in_branch = You are already in branch %s
