--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -8,6 +8,7 @@ sub_directory_already_exists = Subdirectory %s has already been initialized.
 changes_to_be_committed = Files that are ready to be committed:
 untracked_files = Untracked Files:
 file_is_not_found! = File %s is not found!
+no_changes_to_be_added = No changes to be added to the staging area.
 stage_area_is_empty = No changes added to commit (use "syncNinja add")
 successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
