reflecting changes on file system

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -20,3 +20,4 @@ branch_not_found = branch %s not found
 switched_to_branch = you are now on %s branch
 restored_successfully = Changes has been restored successfully.
 you_are_already_in_branch = You are already in branch %s
+Failed_to_update_file_system_for = Failed to update file system for %s
