--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -21,3 +21,4 @@ switched_to_branch = you are now on %s branch
 restored_successfully = Changes has been restored successfully.
 you_are_already_in_branch = You are already in branch %s
 Failed_to_update_file_system_for = Failed to update file system for %s
+merged_successfully = Branch %s has been merged successfully.
