--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -7,9 +7,9 @@ file_already_exists = File %s has already been initialized.
 sub_directory_already_exists = Subdirectory %s has already been initialized.
 changes_to_be_committed = Files that are ready to be committed:
 untracked_files = Untracked Files:
-file_is_not_found! = File %s is not found!
+file_is_not_found = File %s is not found!
 no_changes_to_be_added = No changes to be added to the staging area.
-stage_area_is_empty = No changes added to commit (use "syncNinja add")
+stage_area_is_empty = No changes added to commit (use "syncninja add")
 successfully_added = Files added to the staging area.
 successfully_removed = Files are removed from staging area.
 commit_successfully = Changes has been committed successfully.
@@ -19,6 +19,10 @@ branch_created_successfully = branch %s created successfully
 branch_not_found = branch %s not found
 switched_to_branch = you are now on %s branch
 restored_successfully = Changes has been restored successfully.
-you_are_already_in_branch = You are already in branch %s
+already_in_branch = You are already in branch %s
 Failed_to_update_file_system_for = Failed to update file system for %s
 merged_successfully = Branch %s has been merged successfully.
+current_branch = you are currently on branch %s
+conflict_detected = you have a conflict, you must fix it, then use: (syncninja commit) then (syncninja merge) to continue.
+merged_failed_uncommitted_changes = you can not merge with uncommitted changes, use: (syncninja commit) or (syncninja restore)
+checkout_failed_uncommitted_changes = you can not checkout with uncommitted changes, use: (syncninja commit) or (syncninja restore)
