fix-checkout-untracked-only

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -25,4 +25,4 @@ merged_successfully = Branch %s has been merged successfully.
 current_branch = you are currently on branch %s
 conflict_detected = you have a conflict, you must fix it, then use: (syncninja commit) then (syncninja merge) to continue.
 merged_failed_uncommitted_changes = you can not merge with uncommitted changes, use: (syncninja commit) or (syncninja restore)
-checkout_failed_uncommitted_changes = you can not checkout with uncommitted changes, use: (syncninja commit) or (syncninja restore)
+checkout_failed_unstaged_changes = you can not checkout with unstaged changes, use: (syncninja add) or (syncninja restore)
